--- a/.poggit.yml
+++ b/.poggit.yml
@@ -5,4 +5,8 @@ branches:
 projects:
   FunBlockOneBlock:
     path: ""
+    libs:
+      - src: CortexPE/Commando/Commando
+        version:  ^3.0.0
+        branch: PM4
 ...
