--- a/.poggit.yml
+++ b/.poggit.yml
@@ -9,4 +9,6 @@ projects:
       - src: CortexPE/Commando/Commando
         version:  ^3.0.0
         branch: PM4
+      - src: poggit/libasynql/libasynql
+          version: ^3.4.0
 ...
