--- a/resources/messages.yml
+++ b/resources/messages.yml
@@ -17,7 +17,7 @@ messages:
   no-island: 'the mentioned player has no oneblock island'
   no-ob-go: 'you do not have an oneblock island to go to'
   no-perms-delete: "you do not have permissions to delete someone else's OneBlock island"
-  deleted-ob-others: 'successfully deleted {NAME}'s OneBlock Island'
+  deleted-ob: 'successfully deleted {NAME}'s OneBlock Island'
   create: "successfully created an island"
   visit: 'visiting {player}'s OneBlock Island'
   delete: 'deleted your OneBlock Island successfully'
