--- a/resources/messages.yml
+++ b/resources/messages.yml
@@ -23,6 +23,7 @@ messages:
   invite-expired: 'the invite has expired'
   invite-pending: 'you already have one pending invitation'
   invite-sent: "you have sent {PLAYER} an invite to your OneBlock Island. Wait for them to accept"
+  invite-accepted: '{PLAYER} has joined the OneBlock Island'
   create: "successfully created an island"
   visit: "visiting {NAME}"s OneBlock Island"
   delete: 'deleted your OneBlock Island successfully'
