--- a/.poggit.yml
+++ b/.poggit.yml
@@ -10,7 +10,7 @@ projects:
         version:  ^3.0.0
         branch: PM4
       - src: poggit/libasynql/libasynql
-        version: ^3.4.0
+        version: 3.4.0
       - src: muqsit/simplepackethandler/SimplePacketHandler
         version: ^0.0.1
 ...
