--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: FunBlockOneBlock
 api: 4.0.0
 author: cosmicnebula200
 main: cosmicnebula200\FunBlockOneBlock\FunBlockOneBlock
-version: 1.0.0
+version: 1.0.0-BETA-1
 
 permissions:
   funblockoneblock.command:
