--- a/.poggit.yml
+++ b/.poggit.yml
@@ -16,4 +16,6 @@ projects:
         version: ^3.4.0
       - src: muqsit/simplepackethandler/SimplePacketHandler
         version: ^0.0.1
+      - src: jojoe77777/FormAPI/libFormAPI
+          version: ^2.1.0
 ...
